fix(docs): images are squished when too large for their container

--- a/docs~/src/css/custom.css
+++ b/docs~/src/css/custom.css
@@ -57,3 +57,8 @@
   display: block;
   top: -5px;
 }
+
+img {
+  aspect-ratio: auto;
+  height: auto;
+}
